# Consoleoid

./: CMakeLists.txt  Consoleoid.cpp  README.md
cm/: CMakeCache.txt  Makefile  cmake_install.cmake
